--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/resest.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/galeria-3.jpg" type="image/x-icon">
     <link rel="stylesheet" href="fonts/fontawesome-free-6.1.2-web/css/all.min.css">
